tests/snapshots/normalize__insta_normalize_prefix@001.snap
---
source: tests/normalize.rs
description: "input: items [\"café con leche\", \"cafe solo\", \"té verde\"]\noptions: --normalize"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  té verde                                                                      "
"  cafe solo                                                                     "
"> café con leche                                                                "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
