tests/snapshots/normalize__insta_normalize_prefix@002.snap
---
source: tests/normalize.rs
description: "input: items [\"café con leche\", \"cafe solo\", \"té verde\"]\noptions: --normalize\nafter:\n  @type \"^cafe\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  cafe solo                                                                     "
"> café con leche                                                                "
"  2/3                                                                        0/0"
"> ^cafe                                                                         "
cursor: (24, 8)
