tests/snapshots/normalize__insta_normalize_suffix-2.snap
---
source: tests/normalize.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  the cafe                                                                      "
"> mi café                                                                       "
"  2/3                                                                        0/0"
"> cafe$                                                                         "
cursor: (24, 8)
