tests/snapshots/normalize__insta_normalize_suffix.snap
---
source: tests/normalize.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  green tea                                                                     "
"  the cafe                                                                      "
"> mi café                                                                       "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
