tests/snapshots/normalize__insta_normalize_suffix@001.snap
---
source: tests/normalize.rs
description: "input: items [\"mi café\", \"the cafe\", \"green tea\"]\noptions: --normalize"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  green tea                                                                     "
"  the cafe                                                                      "
"> mi café                                                                       "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
