tests/snapshots/normalize__insta_normalize_suffix@002.snap
---
source: tests/normalize.rs
description: "input: items [\"mi café\", \"the cafe\", \"green tea\"]\noptions: --normalize\nafter:\n  @type \"cafe$\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  the cafe                                                                      "
"> mi café                                                                       "
"  2/3                                                                        0/0"
"> cafe$                                                                         "
cursor: (24, 8)
