tests/snapshots/normalize__insta_normalize_umlauts.snap
---
source: tests/normalize.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  grosse                                                                        "
"  größe                                                                         "
"  uber                                                                          "
"> über                                                                          "
"  4/4                                                                        0/0"
">                                                                               "
cursor: (24, 3)
