tests/snapshots/normalize__insta_normalize_umlauts@001.snap
---
source: tests/normalize.rs
description: "input: items [\"über\", \"uber\", \"größe\", \"grosse\"]\noptions: --normalize"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  grosse                                                                        "
"  größe                                                                         "
"  uber                                                                          "
"> über                                                                          "
"  4/4                                                                        0/0"
">                                                                               "
cursor: (24, 3)
