tests/snapshots/normalize__insta_normalize_umlauts@002.snap
---
source: tests/normalize.rs
description: "input: items [\"über\", \"uber\", \"größe\", \"grosse\"]\noptions: --normalize\nafter:\n  @type \"uber\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  uber                                                                          "
"> über                                                                          "
"  2/4                                                                        0/0"
"> uber                                                                          "
cursor: (24, 7)
