tests/snapshots/normalize__insta_normalize_umlauts@003.snap
---
source: tests/normalize.rs
description: "input: items [\"über\", \"uber\", \"größe\", \"grosse\"]\noptions: --normalize\nafter:\n  @ctrl 'w'\n  @type \"grosse\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> grosse                                                                        "
"  1/4                                                                        0/0"
"> grosse                                                                        "
cursor: (24, 9)
